--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<mah:MetroWindow x:Class="Mangopad.MainWindow"
+﻿<mah:MetroWindow x:Name="metroWindow" x:Class="Mangopad.MainWindow"
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -22,70 +22,18 @@
                  NonActiveWindowTitleBrush="#30475e"
                  TitleForeground="White"
                  TitleAlignment="Center"
-                 Title="{Binding ActiveNote.Path}">
+                 Title="{Binding OpenNote, NotifyOnSourceUpdated=True}">
 
     <Window.DataContext>
         <vms:NoteViewModel/>
     </Window.DataContext>
-
-    <mah:MetroWindow.LeftWindowCommands>
-        <mah:WindowCommands>
-            <mah:DropDownButton ToolTip="Open file dialog" ArrowVisibility="Collapsed" Margin="6,0,-10,0">
-                <mah:DropDownButton.Items>
-                    <Button>New</Button>
-                    <Button>Open</Button>
-                    <Button>Save</Button>
-                    <Button>Save As</Button>
-                    <Button>Close</Button>
-                </mah:DropDownButton.Items>
-                <mah:DropDownButton.Icon>
-                    <iconPacks:BoxIcons Kind="SolidFileBlank" />
-                </mah:DropDownButton.Icon>
-            </mah:DropDownButton>
-            <mah:DropDownButton ToolTip="Open edit dialog" ArrowVisibility="Collapsed" Margin="5,0,-10,0">
-                <mah:DropDownButton.Items>
-                    <Button>Select All</Button>
-                    <Button>Copy</Button>
-                    <Button>Clear</Button>
-                    <Button>Find</Button>
-                    <Button>Replace</Button>
-                </mah:DropDownButton.Items>
-                <mah:DropDownButton.Icon>
-                    <iconPacks:PackIconBoxIcons Kind="SolidEdit" />
-                </mah:DropDownButton.Icon>
-            </mah:DropDownButton>
-            <Button ToolTip="Quick Save">
-                <Button.ContentTemplate>
-                    <DataTemplate>
-                        <iconPacks:PackIconBoxIcons Kind="SolidSave" />
-                    </DataTemplate>
-                </Button.ContentTemplate>
-            </Button>
-            <Button ToolTip="Print">
-                <Button.ContentTemplate>
-                    <DataTemplate>
-                        <iconPacks:PackIconBoxIcons Kind="SolidPrinter" />
-                    </DataTemplate>
-                </Button.ContentTemplate>
-            </Button>
-            <Button ToolTip="Settings">
-                <Button.ContentTemplate>
-                    <DataTemplate>
-                        <iconPacks:PackIconBoxIcons Kind="SolidCog" />
-                    </DataTemplate>
-                </Button.ContentTemplate>
-            </Button>
-            <Label Content="Mangopad" Margin="0,1,0,0" Foreground="DarkGray"/>
-        </mah:WindowCommands>
-    </mah:MetroWindow.LeftWindowCommands>
-
 
     <Grid Background="#222831">
         <Grid.RowDefinitions>
             <RowDefinition Height="12*" />
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
-        <TextBox Grid.Row="0" HorizontalAlignment="Stretch" Text="TextBox" TextWrapping="Wrap" AcceptsReturn="True"
+        <TextBox Name="noteBox" Grid.Row="0" HorizontalAlignment="Stretch" Text="{Binding NoteContext, NotifyOnSourceUpdated=True}" TextWrapping="Wrap" AcceptsReturn="True"
                  AcceptsTab="True" VerticalScrollBarVisibility="Auto" VerticalAlignment="Stretch" BorderThickness="0" />
         <Grid Row="1">
             <Grid.ColumnDefinitions>
@@ -96,6 +44,7 @@
             <Label Grid.Column="0" Content="Char:" VerticalAlignment="Bottom" Margin="10,0,0,3" />
             <Label Grid.Column="1" Content="Words:" VerticalAlignment="Bottom" Margin="0,0,0,3" />
             <Label Grid.Column="2" Content="Last Saved:" VerticalAlignment="Bottom" Margin="0,0,0,3" />
+            <Label Grid.Column="2" Content="{Binding LastSaveTime}" VerticalAlignment="Bottom" Margin="65,0,0,3" />
             <Image Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right">
                 <Image.Source>
                     <DrawingImage>
@@ -144,5 +93,54 @@
         </Grid>
     </Grid>
 
+    <mah:MetroWindow.LeftWindowCommands>
+        <mah:WindowCommands>
+            <mah:DropDownButton ToolTip="Open file dialog" ArrowVisibility="Collapsed" Margin="6,0,-10,0" >
+                <mah:DropDownButton.Items>
+                    <Button Command="{Binding NewFileCommand}">New</Button>
+                    <Button Command="{Binding OpenFileCommand}">Open</Button>
+                    <Button Command="{Binding SaveFileAsCommand}"  CommandParameter="{Binding ElementName=noteBox, Path=Text}">Save As</Button>
+                    <Button Command="{Binding SaveFileCommand}" CommandParameter="{Binding ElementName=noteBox, Path=Text}">Save</Button>
+                    <Button>Exit</Button>
+                </mah:DropDownButton.Items>
+                <mah:DropDownButton.Icon>
+                    <iconPacks:BoxIcons Kind="SolidFileBlank" />
+                </mah:DropDownButton.Icon>
+            </mah:DropDownButton>
+            <mah:DropDownButton ToolTip="Open edit dialog" ArrowVisibility="Collapsed" Margin="5,0,-10,0">
+                <mah:DropDownButton.Items>
+                    <Button>Select All</Button>
+                    <Button>Copy</Button>
+                    <Button>Find</Button>
+                    <Button>Replace</Button>
+                </mah:DropDownButton.Items>
+                <mah:DropDownButton.Icon>
+                    <iconPacks:PackIconBoxIcons Kind="SolidEdit" />
+                </mah:DropDownButton.Icon>
+            </mah:DropDownButton>
+            <Button ToolTip="Quick Save" Command="{Binding SaveFileCommand}" CommandParameter="{Binding ElementName=noteBox, Path=Text}">
+                <Button.ContentTemplate>
+                    <DataTemplate>
+                        <iconPacks:PackIconBoxIcons Kind="SolidSave" />
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
+            <Button ToolTip="Print">
+                <Button.ContentTemplate>
+                    <DataTemplate>
+                        <iconPacks:PackIconBoxIcons Kind="SolidPrinter" />
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
+            <Button ToolTip="Settings">
+                <Button.ContentTemplate>
+                    <DataTemplate>
+                        <iconPacks:PackIconBoxIcons Kind="SolidCog" />
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
+            <Label Content="Mangopad" Margin="0,1,0,0" Foreground="DarkGray"/>
+        </mah:WindowCommands>
+    </mah:MetroWindow.LeftWindowCommands>
 
 </mah:MetroWindow>
