--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -33,7 +33,7 @@
             <RowDefinition Height="12*" />
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
-        <TextBox Name="noteBox" Grid.Row="0" HorizontalAlignment="Stretch" Text="{Binding NoteContext, NotifyOnSourceUpdated=True}" TextWrapping="Wrap" AcceptsReturn="True"
+        <TextBox Name="noteBox" Grid.Row="0" HorizontalAlignment="Stretch" Text="{Binding NoteContext, Mode=TwoWay, NotifyOnTargetUpdated=True, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" AcceptsReturn="True"
                  AcceptsTab="True" VerticalScrollBarVisibility="Auto" VerticalAlignment="Stretch" BorderThickness="0" />
         <Grid Row="1">
             <Grid.ColumnDefinitions>
@@ -42,9 +42,11 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="Char:" VerticalAlignment="Bottom" Margin="10,0,0,3" />
-            <Label Grid.Column="1" Content="Words:" VerticalAlignment="Bottom" Margin="0,0,0,3" />
-            <Label Grid.Column="2" Content="Last Saved:" VerticalAlignment="Bottom" Margin="0,0,0,3" />
-            <Label Grid.Column="2" Content="{Binding LastSaveTime}" VerticalAlignment="Bottom" Margin="65,0,0,3" />
+            <Label Grid.Column="0" Content="{Binding CharCount}" VerticalAlignment="Bottom" Margin="45,0,0,3" />
+            <Label Grid.Column="1" Content="Words: ~" VerticalAlignment="Bottom" Margin="0,0,0,3" />
+            <Label Grid.Column="1" Content="{Binding WordCount}" VerticalAlignment="Bottom" Margin="50,0,0,2" />
+            <Label Grid.Column="2" Content="Last Saved:" VerticalAlignment="Bottom" Margin="5,0,0,3" />
+            <Label Grid.Column="2" Content="{Binding LastSaveTime}" VerticalAlignment="Bottom" Margin="70,0,0,3" />
             <Image Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right">
                 <Image.Source>
                     <DrawingImage>
@@ -99,9 +101,9 @@
                 <mah:DropDownButton.Items>
                     <Button Command="{Binding NewFileCommand}">New</Button>
                     <Button Command="{Binding OpenFileCommand}">Open</Button>
-                    <Button Command="{Binding SaveFileAsCommand}"  CommandParameter="{Binding ElementName=noteBox, Path=Text}">Save As</Button>
+                    <Button Command="{Binding SaveFileAsCommand}" CommandParameter="{Binding ElementName=noteBox, Path=Text}">Save As</Button>
                     <Button Command="{Binding SaveFileCommand}" CommandParameter="{Binding ElementName=noteBox, Path=Text}">Save</Button>
-                    <Button>Exit</Button>
+                    <Button Command="{Binding ExitFileCommand}">Exit</Button>
                 </mah:DropDownButton.Items>
                 <mah:DropDownButton.Icon>
                     <iconPacks:BoxIcons Kind="SolidFileBlank" />
@@ -110,7 +112,6 @@
             <mah:DropDownButton ToolTip="Open edit dialog" ArrowVisibility="Collapsed" Margin="5,0,-10,0">
                 <mah:DropDownButton.Items>
                     <Button>Select All</Button>
-                    <Button>Copy</Button>
                     <Button>Find</Button>
                     <Button>Replace</Button>
                 </mah:DropDownButton.Items>
@@ -125,7 +126,7 @@
                     </DataTemplate>
                 </Button.ContentTemplate>
             </Button>
-            <Button ToolTip="Print">
+            <Button ToolTip="Print" Command="{Binding PrintFileCommand}" CommandParameter="{Binding ElementName=noteBox, Path=Text}">
                 <Button.ContentTemplate>
                     <DataTemplate>
                         <iconPacks:PackIconBoxIcons Kind="SolidPrinter" />
